# groups

./: ChangeLog.md  LICENSE  groups.cabal
.github/workflows/: haskell.yml
src/Data/: Group.hs
