name:                groups
version:             0.4.1.0
synopsis:            Groups
description:
  A group is a monoid with invertibility.
license:             BSD3
license-file:        LICENSE
author:              Nathan "Taneb" van Doorn
maintainer:          nvd1234@gmail.com
copyright:           Copyright (C) 2013 Nathan van Doorn
category:            Algebra, Data, Math
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Data.Group
  -- other-modules:
  build-depends:       base >= 4.12.0.0 && < 5
  hs-source-dirs:      src
