cabal-version:       2.4
name:                groups
version:             0.5.3
synopsis:            Groups
description:
  A group is a monoid with invertibility.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Nathan "Taneb" van Doorn
maintainer:          nvd1234@gmail.com
copyright:           Copyright (C) 2013 Nathan van Doorn
category:            Algebra, Data, Math
build-type:          Simple
bug-reports:         https://github.com/Taneb/groups/issues
extra-source-files:
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/Taneb/groups.git

library
  exposed-modules:     Data.Group
  -- other-modules:
  hs-source-dirs:      src
  default-language:    Haskell2010

  build-depends:       base >= 4.6 && < 5
                     , commutative-semigroups >= 0.0 && < 0.1

  if impl(ghc < 8.6) -- really, if base < 8.12
    build-depends: base-orphans >= 0.8 && < 0.9
